// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test backup google drive 1`] = `"WalletFileBackup"`;

exports[`Test backup google drive 2`] = `
Object {
  "isNewAccount": false,
  "seed": Array [
    "seed",
    "seed",
  ],
  "type": 12,
}
`;

exports[`Test seed 1`] = `"SaveSeed"`;

exports[`Test seed 2`] = `
Object {
  "isNewAccount": false,
  "seed": Array [
    "seed",
    "seed",
  ],
}
`;

exports[`Test view 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#888888",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 10,
        "width": "90%",
      }
    }
  >
    backup.description
  </Text>
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    data={
      Array [
        Object {
          "img": <Image
            source={
              Object {
                "testUri": "../../../assets/img/google-drive.png",
              }
            }
            style={
              Object {
                "height": 32,
                "width": 32,
              }
            }
          />,
          "onClick": [Function],
          "title": "backup.google_drive_title",
        },
        Object {
          "img": <Icon
            allowFontScaling={false}
            color="#888888"
            name="content-copy"
            size={32}
          />,
          "onClick": [Function],
          "title": "backup.manually_title",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
        "marginTop": 20,
        "width": "88%",
      }
    }
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "opacity": 1,
              "paddingBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/google-drive.png",
              }
            }
            style={
              Object {
                "height": 32,
                "width": 32,
              }
            }
          />
          <Text
            style={
              Object {
                "alignSelf": "center",
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 17,
                "fontStyle": "normal",
                "marginLeft": 10,
              }
            }
          >
            backup.google_drive_title
          </Text>
        </View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "borderBottomColor": "#f5f5f5",
              "borderBottomWidth": 1,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "opacity": 1,
              "paddingBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#888888",
                  "fontSize": 32,
                },
                undefined,
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            󰆏
          </Text>
          <Text
            style={
              Object {
                "alignSelf": "center",
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 17,
                "fontStyle": "normal",
                "marginLeft": 10,
              }
            }
          >
            backup.manually_title
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
